yaml/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpledata
  namespace: demo-circuitbreaker
spec:
  selector:
    matchLabels:
      app: simpledata
  replicas: 1
  template:
    metadata:
      name: simpledata
      labels:
        app: simpledata
        version: v4
    spec:
      containers:
      - name: simpledata
        image: ailtonmsj/simpledata:v4
        imagePullPolicy: Always
