yaml/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpledata
  namespace: demo-circuitbreaker
spec:
  selector:
    app: simpledata
  ports:
    - name: http
      port: 8080
  type: ClusterIP
---
