yaml/05-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: simpledata-destination-rule
  namespace: demo-circuitbreaker
spec:
  host: simpledata.demo-circuitbreaker.svc.cluster.local
  subsets:
  - name: v5
    labels:
      version: v5
  trafficPolicy:
    connectionPool:
      http: # configuracoes aplicadas somente a conexoes http
        http1MaxPendingRequests: 1 # conexoes maximas pendentes
        maxRequestsPerConnection: 1 # maximo de requisicoes por conexao
      tcp: # configuracoes aplicadas tanto a conexoes http como tcp
        maxConnections: 1 # conexoes maximas
        connectTimeout: 1s # tempo maximo de conexao
    outlierDetection:
      consecutive5xxErrors: 3 # numero consecutivos de erros 5XX para a ejecao
      baseEjectionTime: 1m # tempo minimo de ejecao
      interval: 20s # intervalo entre a ejecao e a analise
      maxEjectionPercent: 100 # max de hosts ejetados do loadbalancer
      minHealthPercent: 0 # min de hosts saudaveis para desabilitar o outlier detection
